k8s-manifest-files/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service1
spec:
  selector:
    app: devnode-app
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30001
  type: NodePort
