k8s-manifest-files/ingress-controll.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: devops.lab
      http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /node
            pathType: Prefix
            backend:
              service:
                name: node-service1
                port:
                  number: 3000
